#6481 improved fix - removed redundant rule and using explicit nowrap
svn changeset:17367/svn branch:6.5

--- a/WebContent/VAADIN/themes/reindeer/table/table.css
+++ b/WebContent/VAADIN/themes/reindeer/table/table.css
@@ -172,10 +172,10 @@
 	-webkit-border-bottom-left-radius: 4px;
 	-webkit-border-bottom-right-radius: 4px;
 	height: 13px;
-	padding: 4px 25px;
+	padding: 4px 30px;
+	white-space: nowrap;
 	color: #222;
 	text-shadow: #fff 0 1px 0;
-	width: 110px;
 	position: relative;
 	top: 1px;
 	-webkit-box-shadow: rgba(0,0,0,.5) 0 1px 2px;
